@@ -60,7 +60,7 @@
    typedtree printtyped ctype printtyp includeclass mtype envaux includecore
    tast_iterator tast_mapper signature_group cmt_format untypeast
    includemod includemod_errorprinter
-   typetexp patterns printpat parmatch stypes typedecl typeopt rec_check
+   typetexp patterns printpat parmatch stypes typeopt typedecl rec_check
    typecore
    typeclass typemod typedecl_variance typedecl_properties typedecl_immediacy
    typedecl_unboxed typedecl_separability cmt2annot
